tests/chapter_15/invalid_parse/invalid_abstract_declarator.c
int main(void)
{
    // invalid abstract declarator syntax
    return (int[3] *)0;
}